[project]
name = "devops-pulse"
version = "0.1.0"
description = "Daily real-data DevOps digest: CVEs, CNCF releases, k8s/cloud news."
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "feedparser>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pulse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
